# TFG

./: .gitignore  Makefile  README.md  clip_score.py  find_tam.py  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
api/endpoints/: image_endpoints.py  model_endpoints.py
api/utils/: image_operations.py  model_operations.py  validation.py
tests/: test_image_endpoints.py  test_model_endpoints.py
tfg/: clip_score.py
tfg/api/: main.py
tfg/api/endpoints/: image_endpoints.py  model_endpoints.py
tfg/api/utils/: model_operations.py  validation.py
training/: download_model.py  modified_unet.py  try_dogs.py  try_dreambooth.py
